# computer_graphics

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: EBO.h  VAO.h  VBO.h  shader.h  texture.h
include/glad/: glad.h
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shader.cpp  texture.cpp
src/shaders/: deuteranopia.frag  final.frag  protanopia.frag  tritanopia.frag
